FE/infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - host: andychen.com.tw
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
